<resources>
    <string name="app_name">Calculator_</string>
    <string name="eq">=</string>
    <string name="seven">7</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="three">3</string>

    <string name="dec_point">.</string>
    <string name="AC">AC</string>
    <string name="other_op">ETC</string>
    <string name="return_to">RET</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="l_bracket">(</string>
    <string name="r_bracket">)</string>
    <string name="zero">0</string>

    <string name="x_3">x³</string>
    <string name="reminder">%</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>

    <string name="factorial">x!</string>
    <string name="sqrt">√</string>
    <string name="sin">sin</string>

    <string name="cos">cos</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="ctg">ctg</string>
    <string name="e">e</string>
    <string name="exp">eˣ</string>
    <string name="x_y">xʸ</string>
    <string name="x_2">x²</string>
    <string name="tan">tg</string>
    <string name="pi">π</string>
    <string name="module">∣x∣</string>
    <string name="change_mode">pro</string>
    <string name="backword">1/x</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>