<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ScientificOperationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_l_br"
                android:text="@string/l_bracket"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_r_br"
                android:text="@string/r_bracket"/>

            <TextView
                android:id="@+id/btn_x_y"
                style="@style/btn_number"
                android:text="@string/x_y" />

            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_fact"
                android:text="@string/factorial"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_sin"
                android:text="@string/sin"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_cos"
                android:text="@string/cos"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_ln"
                android:text="@string/ln"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_log"
                android:text="@string/log"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_tan"
                android:text="@string/tan"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_ctg"
                android:text="@string/ctg"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_exp"
                android:text="@string/exp"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_e"
                android:text="@string/e"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_x_2"
                android:text="@string/x_2"/>
            <TextView
                android:id="@+id/btn_x_3"
                style="@style/btn_number"
                android:text="@string/x_3"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_module"
                android:text="@string/module"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_pi"
                android:text="@string/pi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_backword"
                android:text="@string/backword"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_sqrt"
                android:text="@string/sqrt"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_eq"
                android:text="@string/eq"/>
            <TextView
                style="@style/btn_action"
                android:id="@+id/btn_return_to"
                android:text="@string/return_to"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>