<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".BaseOperationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_action"
                android:id="@+id/btn_clear"
                android:text="@string/AC"/>
            <TextView
                style="@style/btn_action"
                android:id="@+id/btn_reminder"
                android:text="@string/reminder"/>
            <TextView
                style="@style/btn_action"
                android:id="@+id/btn_change_sign"
                android:text="+/-"/>
            <TextView
                style="@style/btn_action"
                android:id="@+id/btn_plus"
                android:text="@string/plus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_7"
                android:text="@string/seven"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_8"
                android:text="@string/eight"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_9"
                android:text="@string/nine"/>
            <TextView
                style="@style/btn_action"
                android:id="@+id/btn_mul"
                android:text="@string/multiplication"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_4"
                android:text="@string/four"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_5"
                android:text="@string/five"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_6"
                android:text="@string/six"/>
            <TextView
                style="@style/btn_action"
                android:id="@+id/btn_sub"
                android:text="@string/minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_1"
                android:text="@string/one"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_2"
                android:text="@string/two"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_3"
                android:text="@string/three"/>
            <TextView
                style="@style/btn_action"
                android:id="@+id/btn_div"
                android:text="@string/division"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_other"
                android:text="@string/other_op"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_zero"
                android:text="@string/zero"/>
            <TextView
                style="@style/btn_number"
                android:id="@+id/btn_point"
                android:text="@string/dec_point"/>
            <TextView
                style="@style/btn_action"
                android:id="@+id/btn_eq"
                android:text="@string/eq"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>